--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "framer-motion": "^9.0.7",
     "maath": "^0.5.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-image-grid-gallery": "^2.1.2",
     "react-router-dom": "^6.8.1",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.149.0"
+    "three": ">=0.159.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
