--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^9.0.7",
     "glightbox": "^3.3.1",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
+    "lucide-react": "^0.562.0",
     "maath": "^0.5.2",
     "next": "^15.0.2",
     "process": "^0.11.10",
@@ -32,6 +37,7 @@
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^12.0.3",
+    "tailwind-merge": "^3.4.0",
     "three": ">=0.159.0",
     "typed.js": "^2.1.0",
     "waypoints": "^4.0.1"
